<?xml version="1.0"?>
<package format="2">
  <name>orientus_driver</name>
  <version>0.0.4</version>
  <description>Driver for Orientus IMU</description>
  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <author>Nick Otero</author>
  <author>Mitchell Wills</author>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/orientus_driver</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/orientus_driver/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/orientus_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>orientus_sdk_c</depend>
  <depend>diagnostic_updater</depend>

</package>
